--- a/MongoNote/pom.xml
+++ b/MongoNote/pom.xml
@@ -8,7 +8,7 @@
   <packaging>jar</packaging>
 
   <name>MongoNote</name>
-  <url>http://maven.apache.org</url>
+  <url>https://github.com/ArkhaLime/EverNoteLike-MongoDB</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
