--- a/MongoNote/config.properties
+++ b/MongoNote/config.properties
@@ -1,3 +1,6 @@
 #chaîne de connexion vers la base de données
 #quelques exemples sont disponibles sur cette page => https://mongodb.github.io/mongo-java-driver/3.4/driver/tutorials/connect-to-mongodb/
 connectionString=mongodb://localhost:27017/
+database.name=mongonote
+collection.users.name=users
+collection.notes.name=notes
