--- a/MongoNote/config.properties
+++ b/MongoNote/config.properties
@@ -1,6 +1,10 @@
 #chaîne de connexion vers la base de données
 #quelques exemples sont disponibles sur cette page => https://mongodb.github.io/mongo-java-driver/3.4/driver/tutorials/connect-to-mongodb/
-connectionString=mongodb://localhost:27017/
+#connectionString=mongodb://localhost:27017/
+#database.name=mongonote
+#collection.users.name=users
+#collection.notes.name=notes
+connectionString=mongodb://mongonote:mongonote@mongonote-shard-00-00-oolzt.mongodb.net:27017,mongonote-shard-00-01-oolzt.mongodb.net:27017,mongonote-shard-00-02-oolzt.mongodb.net:27017/mongonote?ssl=true&replicaSet=mongonote-shard-0&authSource=admin
 database.name=mongonote
 collection.users.name=users
 collection.notes.name=notes
